Bug 80017 - [6 Regression] ICE: Max. number of generated reload insns per insn is achieved (90)
Summary: [6 Regression] ICE: Max. number of generated reload insns per insn is achieve...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 7.0
: P2 normal
Target Milestone: 7.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ra
Depends on:
Blocks:
 
Reported: 2017-03-12 19:18 UTC by Martin Liška
Modified: 2018-10-26 11:45 UTC (History)
4 users (show)

See Also:
Host: x86_64-linux-gnu
Target: x86_64-linux-gnu
Build: x86_64-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2017-06-16 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liška 2017-03-12 19:18:59 UTC
Starting from 4.9.0 we ICE on:

$ gcc /home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/pr37434-1.c -march=pentium -m32 -msse -c
/home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/pr37434-1.c: In function ‘Set_AC4R_SETUP_I’:
/home/marxin/Programming/gcc/gcc/testsuite/gcc.target/i386/pr37434-1.c:12:1: internal compiler error: Max. number of generated reload insns per insn is achieved (90)

 }
 ^
0xd18074 lra_constraints(bool)
	../../gcc/lra-constraints.c:4678
0xd0278c lra(_IO_FILE*)
	../../gcc/lra.c:2392
0xcac6b2 do_reload
	../../gcc/ira.c:5451
0xcacb52 execute
	../../gcc/ira.c:5635

and probably the same issue:

$ cat ice.c
void a ()
{
  short b;
  __attribute__ ((__vector_size__ (8 * sizeof (short)))) short c = {b};
}

$ gcc ice.c -c -m32 -march=athlon-mp
ice.c: In function ‘a’:
ice.c:5:1: internal compiler error: Max. number of generated reload insns per insn is achieved (90)

 }
 ^
0xd18074 lra_constraints(bool)
	../../gcc/lra-constraints.c:4678
0xd0278c lra(_IO_FILE*)
	../../gcc/lra.c:2392
0xcac6b2 do_reload
	../../gcc/ira.c:5451
0xcacb52 execute
	../../gcc/ira.c:5635
Comment 1 Vladimir Makarov 2017-03-14 02:15:57 UTC
Thank you for the report.  I've reproduced and started to work on it.  The fix will be probably ready on Wednesday.
Comment 2 Vladimir Makarov 2017-03-15 23:04:41 UTC
Author: vmakarov
Date: Wed Mar 15 23:04:09 2017
New Revision: 246181

URL: https://gcc.gnu.org/viewcvs?rev=246181&root=gcc&view=rev
Log:
2017-03-15  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/80017
	* lra-constraints.c (process_alt_operands): Increase reject for
	reloading an input/output operand.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/lra-constraints.c
Comment 3 Jakub Jelinek 2017-10-10 13:25:18 UTC
GCC 5 branch is being closed
Comment 4 Jakub Jelinek 2018-10-26 11:45:43 UTC
GCC 6 branch is being closed, fixed in 7.x.