2017-03-15  Vladimir Makarov  <vmakarov@redhat.com>

PR target/80017
	* lra-constraints.c (process_alt_operands): Increase reject for
	reloading an input/output operand.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@246181 138bc75d-0d04-0410-961f-82ee72b054a4